Bug 482390 - Clipboard no longer displays application name
Summary: Clipboard no longer displays application name
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.0.0
Platform: NixOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-03-04 15:19 UTC by Naxdy
Modified: 2024-03-04 16:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Naxdy 2024-03-04 15:19:18 UTC
SUMMARY
The clipboard history popup no longer displays its application name.


STEPS TO REPRODUCE
1. Open clipboard history using Meta+V

OBSERVED RESULT
The text at the top of the window reads "- Clipboard Items"

EXPECTED RESULT
The text at the top of the window reads "%1 - Clipboard Items" where %1 is the application display name.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: NixOS
(available in About System)
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
See https://invent.kde.org/plasma/plasma-workspace/-/blob/master/klipper/klipperpopup.cpp?ref_type=heads#L108
Comment 1 Nicolas Fella 2024-03-04 15:40:48 UTC
QGuiApplication::applicationDisplayName is intentionally empty, see https://invent.kde.org/plasma/plasma-workspace/-/commit/202c74e4b184cffb404e37aeb33333b3fb77e6a0

I'd question why we show the name in the first place. Might be a relict from when there was a standalone klipper that could theoretically run outside of Plasma, but that's not a thing any more
Comment 2 Bug Janitor Service 2024-03-04 15:52:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3998
Comment 3 Nicolas Fella 2024-03-04 16:23:28 UTC
Git commit c2317e8b007208e5ec97e517332cd4e33fec6d59 by Nicolas Fella.
Committed on 04/03/2024 at 15:51.
Pushed by nicolasfella into branch 'master'.

[klipper] Don't show (empty) application name in popup heading

This used to be 'Plasma - Clipboard Items', but applicationDisplayName is empty now

It's also rather superfluous to say Plasma there, so only show 'Clipboard Items'

M  +1    -2    klipper/klipperpopup.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c2317e8b007208e5ec97e517332cd4e33fec6d59