[klipper] Don't show (empty) application name in popup heading

This used to be 'Plasma - Clipboard Items', but applicationDisplayName is empty now

It's also rather superfluous to say Plasma there, so only show 'Clipboard Items'

BUG: 482390